--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -12,7 +12,7 @@
                 <div class="form-group mx-sm-3 mb-4">
                     <label for="data-do" class="sr-only"></label>
                     <input type="text" placeholder="Data do" class="form-control" id="data-do" value="">
-                </div>
+                </div>c
                 <button type="submit" class="btn btn-primary mb-4">Szukaj</button>
             </form>
         </div>
