--- a/templates/images/list.html.twig
+++ b/templates/images/list.html.twig
@@ -1,31 +1,29 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Pracownicy</h3>
+        <h3>Zdjęcia sali "{{ hall.nazwa }}"</h3>
         <div class="btn-group btn-group-toggle">
-            <a href="{{ path('staff_add') }}" class="btn btn-success btn-lg">
-                Dodaj pracownika
+            <a href="{{ path('image_add', {id: hall.id}) }}" class="btn btn-success btn-lg">
+                Dodaj zdjęcie
             </a>
         </div>
         <table class="table">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Imie</th>
-                <th scope="col">Nazwisko</th>
-                <th scope="col">Email</th>
+                <th scope="col">Zdjęcie</th>
                 <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
-            {% for user in users %}
+            {% for image in images %}
                 <tr>
-                    <th scope="row">{{ user.id }}</th>
-                    <td>{{ user.firstName }}</td>
-                    <td>{{ user.lastName }}</td>
-                    <td>{{ user.email }}</td>
+                    <th scope="row">{{ image.id }}</th>
                     <td>
-                        <a href="{{ path('staff_remove', {id: user.id}) }}" class="btn btn-danger btn-xs">
+                        <img height="100" src="{{ images_directory_relative ~ image.filePath }}"/>
+                    </td>
+                    <td>
+                        <a href="{{ path('image_remove', {id: image.id, hallId: hall.id}) }}" class="btn btn-danger btn-xs">
                             usuń
                         </a>
                     </td>
