--- a/templates/layout/default.html.twig
+++ b/templates/layout/default.html.twig
@@ -22,7 +22,7 @@
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Catalog</a>
+                <a class="nav-link" href="{{ path('catalog') }}">Catalog</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">O firmie</a>
