--- a/templates/options/list.html.twig
+++ b/templates/options/list.html.twig
@@ -1,31 +1,29 @@
 {%  extends 'layout/default.html.twig' %}
 {% block body %}
     <div class="container">
-        <h3>Pracownicy</h3>
+        <h3>Opcje</h3>
         <div class="btn-group btn-group-toggle">
-            <a href="{{ path('staff_add') }}" class="btn btn-success btn-lg">
-                Dodaj pracownika
+            <a href="{{ path('option_add') }}" class="btn btn-success btn-lg">
+                Dodaj opcje
             </a>
         </div>
         <table class="table">
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Imie</th>
-                <th scope="col">Nazwisko</th>
-                <th scope="col">Email</th>
+                <th scope="col">Nazwa</th>
+                <th scope="col">Opis</th>
                 <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
-            {% for user in users %}
+            {% for option in options %}
                 <tr>
-                    <th scope="row">{{ user.id }}</th>
-                    <td>{{ user.firstName }}</td>
-                    <td>{{ user.lastName }}</td>
-                    <td>{{ user.email }}</td>
+                    <th scope="row">{{ option.id }}</th>
+                    <td>{{ option.nazwa }}</td>
+                    <td>{{ option.opis }}</td>
                     <td>
-                        <a href="{{ path('staff_remove', {id: user.id}) }}" class="btn btn-danger btn-xs">
+                        <a href="{{ path('option_remove', {id: option.id}) }}" class="btn btn-danger btn-xs">
                             usuń
                         </a>
                     </td>
