аix user model, rename entites

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -17,6 +17,9 @@
             <a href="{{ path('bookings_list') }}" class="btn btn-success btn-lg">
                 Rezerwacje
             </a>
+            <a href="{{ path('rents_list') }}" class="btn btn-primary btn-lg">
+                Wynajęcia
+            </a>
         {% endif %}
     </div>
 </div>
